styles/globals.css
@import 'bootstrap/dist/css/bootstrap.css';
@import url('https://fonts.googleapis.com/css2?family=Sniglet:wght@400;800&display=swap');

html, body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

body {
  color: #ffffff !important;
  background-color: #070e24 !important;
}

.container {
  margin: 0 !important;
  padding: 0 !important;
  max-width: 100% !important;
}

.signin-page {
  align-items: center;
  height: 90vh;
  padding: 30px;
  margin: 0 auto;

  button {
    width: 120px;
    background-color: inherit !important;
    border: none;
  }

  button:hover {
    color: #070e24 !important;
    background-color: #61cbe5 !important;
  }

  button:active {
    background-color: #4b9db2 !important;
  }

  h1 {
    font-family: "Sniglet", system-ui;
    font-weight: 800;
    font-size: 8vw;
    color: #f0aedb;
    margin-bottom: 20px;
  }
}

.logo {
  margin-bottom: 20px;
}

.navbar {
  padding: 0 12px !important;
}

.nav-img {
  width: 50px;
  height: 40px;
  margin-right: 10px;
}

.nav-title {
  font-family: "Sniglet", system-ui;
  font-weight: 800;
  font-size: 32px;
  color: #f0aedb !important;
}

.nav-button {
  height: 38px;
  width: 25%;
  font-size: 100%;
}

@media (max-width: 375px) {
  .nav-button {
    font-size: 90%;
  }
}

@media (max-width: 352px) {
  .nav-title {
    font-size: 26px;
  }

  .nav-button {
    font-size: 75%;
    padding: 8px 0;
  }
}

.btn-transparent {
  color: inherit;
  background-color: transparent !important;
  border: none !important;
}

.btn-inline {
  display: inline-flex !important;
  align-items: center !important;
  justify-content: center !important;
}

.btn-inline svg {
  margin-right: 0.5rem !important;
}

.btn-transparent:hover,
.btn-transparent:focus,
.btn-transparent:active {
  color: inherit;
  background-color: transparent !important;
  border: none !important;
}

.dropdown-menu {
  position: absolute !important;
}

.user-dropdown-toggle {
  margin-left: 10px;
  padding: 0 !important;
  border: none;
  background-color: transparent;
  display: flex !important;
  align-items: center;
}

.user-dropdown-toggle::after {
  display: none !important;
}

.user-dropdown-menu {
  right: 0 !important;
  left: auto !important;
}

.media-card {
  position: relative;
  overflow: hidden;
  border: none !important;
  margin: 8.5px;
}

@media (min-width: 320px) {
  .media-card {
    width: 8rem;
  }
}

@media (min-width: 375px) {
  .media-card {
    width: 10rem;
  }
}

@media (min-width: 425px) {
  .media-card {
    width: 11.5rem;
  }
}

.card-body-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
  color: white;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  opacity: 0;
  transition: opacity 0.3s;
  z-index: 1;
}

.media-card:hover .card-body-container {
  opacity: 1;
}

.card-body {
  text-align: center;
}

.card-body .btn {
  margin: 0 4px;
}

.card-checkbox {
  position: absolute;
  top: 2px;
  right: 2px;
  z-index: 2;
  padding: 2px;
  border-radius: 3px;
}

.watched-checkbox input[type="checkbox"] {
  appearance: none;
  width: 20px;
  height: 20px;
  border: 2px solid green;
  border-radius: 50%;
  position: relative;
  cursor: pointer;
}

.watched-checkbox input[type="checkbox"]:checked {
  background-color: green;
  border: 2px solid green;
}

.watched-checkbox input[type="checkbox"]:checked::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 6px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);
}

.filter-container {
  display: flex;
  justify-content: center;
}

.wrapper {
  display: flex;
  justify-content: center;
  width: 100%;
}

.media-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  max-width: 95%;
}

@media (min-width: 768px) {
  .media-container {
    max-width: 80%;
  }
}

@media (min-width: 1440px) {
  .media-container {
    max-width: 98%;
  }
}

.details {
  margin-top: 20px !important;
}

.placeholder-poster {
  width: 300px;
  height: 500px;
  background-color: gray;
  border-radius: 0.25rem;
}

.cast-img {
  border-radius: 50%;
  object-fit: cover;
  margin: 0 auto;
}

.placeholder-cast-img {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: gray;
  color: white;
  margin: 0 auto;
}

.user-card {
  width: 22rem;
  height: 20rem;
  margin: 10px;
  backdrop-filter: blur(10px);
  background: rgba(255, 255, 255, 0.2) !important;
  color: white !important;
  border-radius: 15px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.user-img {
  width: 125px !important;
  height: 125px !important;
  border-radius: 50% !important;
  object-fit: cover;
  margin: 20px auto;
  display: block;
}

.user-card-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.user-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 80vh;
}

@media (min-width: 1024px) {
  .lookup-page {
    width: 75%;
    margin: 0 auto;
    text-align: center;
  }
}

.lookup-page {
  text-align: center;
  padding: 0 12px;
}

.lookup-form {
  width: 325px;
  margin: 0 auto;
  text-align: center;
}

.lookup-card {
  display: flex;
  flex-direction: row !important;
  width: 100%;
  background-color: #070e24 !important;
  color: #ffffff !important;

  .lookup-img {
    border-radius: 6px;
    height: 300px;
    width: 200px;
  }

  .lookup-body {
    text-align: left;
    padding-top: 0;

    .lookup-title {
      margin-bottom: 20px;
    }
  }

  .lookup-text {
    margin-bottom: 20px;
    height: 180px;
    overflow: auto;
  }
}

.placeholder-image {
  height: 300px;
  width: 200px;
  background-color: gray;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  border-radius: 6px;

  .placeholder-logo {
    height: 100px;
    width: 125px;
  }
  
  .placeholder-text {
    text-align: center;
    color: white;
    font-size: 16px;
    margin-top: 20px;
    width: 200px;
  }
}

.media-form {
  margin-top: 20px;

  button {
    background-color: green !important;
    border: none;
  }

  button:hover {
    background-color: darkgreen !important;
  }
}

.update-page {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50vh;
}

